--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
     "deploy": "touch out/.nojekyll && gh-pages -d out --dotfiles"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@clerk/nextjs": "^6.9.15",
     "@clerk/themes": "^2.2.9",
     "@iconify/icons-ion": "^1.2.10",
     "@iconify/react": "^5.0.1",
+    "antd": "^5.25.2",
     "aos": "^2.3.4",
     "date-fns": "^3.4.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
+    "moment": "^2.30.1",
+    "mongoose": "^8.15.0",
     "next": "^14.2.25",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.4.0",
     "react-slick": "^0.30.2",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
